intear-dex-management/tests/snapshots/writes__unpause.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"engine\", \"unpause\", \"slimedragon.near\"]).await"
---
$ near-intear-dex-management engine unpause slimedragon.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer slimedragon.near · dex.intear.near
│  Unpause dex.intear.near
│  Actions: unpause (1 yoctoNEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    slimedragon.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  unpause
│                       args:         {}
│                       gas:          10.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [slimedragon.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "unpause" call to <dex.intear.near> on behalf of <slimedragon.near> succeeded.

├  ✓ Unpaused dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine unpause slimedragon.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
