intear-dex-management/tests/snapshots/writes__withdraw.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"withdraw\", \"alice.near\", \"nep141:usdt.tether-token.near\",\n\"1 USDt\"]).await"
---
$ near-intear-dex-management engine withdraw alice.near nep141:usdt.tether-token.near '1 USDt' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Withdraw 1 USDt from alice.near's balance on dex.intear.near to alice.near
│  Actions: execute_operations (1 yoctoNEAR, 50 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "Withdraw": {
│                                             "asset_id": "nep141:usdt.tether-token.near",
│                                             "amount": {
│                                               "Exact": "1000000"
│                                             },
│                                             "to": null,
│                                             "rescue_address": null
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          50.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"248500000"}}
│    Logs [usdt.tether-token.near]:
│      EVENT_JSON:{"standard":"nep141","version":"1.0.0","event":"ft_transfer","data":[{"old_owner_id":"dex.intear.near","new_owner_id":"alice.near","amount":"1000000"}]}
│    Logs [alice.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Account":"alice.near"},"to":"alice.near","asset_id":"nep141:usdt.tether-token.near","amount":"1000000"}}
│    Logs [alice.near]:   No logs
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Withdrew 1 USDt from alice.near's balance on dex.intear.near to alice.near
│  alice.near now has 248.5 USDt on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine withdraw alice.near nep141:usdt.tether-token.near '1 USDt' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
