intear-dex-management/tests/snapshots/writes__withdraw_unregistered_asset.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"engine\", \"withdraw\", \"bob.near\", \"nep141:intel.tkn.near\", \"all\"]).await"
---
$ near-intear-dex-management engine withdraw bob.near nep141:intel.tkn.near all network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine withdraw bob.near nep141:intel.tkn.near all network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send

Error:
   0: bob.near has no INTEL on dex.intear.near
